--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <h4>Try up to one month free</h4>
             <img src="img/logo.png" alt="" class="logo">
             <div class="header-text-1">Watch thousands of Tv shows and movies.</div>
+            <div class="header-text-2">HBO Max™, SHOWTIME®, CINEMAX® and STARZ® available as add-ons.</div>
+            <button class="btn btn-cta">Start your free trial</button>
+            <div class="legal-text">Free trial for new & eligible returning subscribers only.</div>
         </div>
     </header>
 
