Added logo and sub-header

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         </div>
     </header>
 
+    <section class="sub-header">
+        <img src="img/logos.png" alt="">
+        <div>
+            <h4>Bundle with any Hulu plan & save</h4>
+            <h3>Get Hulu, Disney+, and ESPN+.</h3>
+            <a href="" class="sub-link">Details</a>
+        </div>
+    </section>
 
 
     <script src="js/main.js"></script>
