Added button and content

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <h3>Get Hulu, Disney+, and ESPN+.</h3>
             <a href="" class="sub-link">Details</a>
         </div>
+        <div>
+            <a href="" class="btn btn-outline">Get bundle</a>
+            <a href="" class="sub-link">Terms apply</a>
+        </div>
     </section>
 
 
