--- a/index.html
+++ b/index.html
@@ -40,6 +40,46 @@
         </div>
     </section>
 
+    <section class = "categories">
+        <h4>Included in all plans</h4>
+        <div class = "text-xl">All the TV you love</div>
+        <div class="sub-text">Stream full seasons of exclusive series, current-season episodes, hit
+            movies, Hulu Originals, kids shows, and more.</div>
+
+
+        <div class = "covers">
+            <div class="cover-1">
+                <div class="cover-grad"></div>
+                <div class="cover-texts">
+                    <div class="sub-title">Past & current seasons</div>
+                </div>
+            </div>
+        </div>
+            <div class="cover-2">
+                <div class="cover-grad"></div>
+                <div class="cover-texts">
+                    <div class="sub-title">New & Classics</div>
+                    <h3>Movies</h3>
+                </div>
+            </div>
+        </div>
+            <div class="cover-3">
+                <div class="cover-grad"></div>
+                <div class="cover-texts">
+                    <div class="sub-title">Groundbreaking</div>
+                    <h3>Hulu Origionals</h3>
+                </div>
+            </div>
+        </div>
+            <div class="cover-4">
+                <div class="cover-grad"></div>
+                <div class="cover-texts">
+                    <div class="sub-title">Add-On</div>
+                    <h3>Premiums</h3>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/main.js"></script>
 </body>
