--- a/index.html
+++ b/index.html
@@ -47,39 +47,37 @@
             movies, Hulu Originals, kids shows, and more.</div>
 
 
-        <div class = "covers">
-            <div class="cover-1">
-                <div class="cover-grad"></div>
-                <div class="cover-texts">
-                    <div class="sub-title">Past & current seasons</div>
+            <div class="covers">
+                <div class="cover-1">
+                  <div class="cover-grad"></div>
+                  <div class="cover-text">
+                    <div class="sub-title">Past & Current Seasons</div>
+                    <h3>TV Shows</h3>
+                  </div>
                 </div>
-            </div>
-        </div>
-            <div class="cover-2">
-                <div class="cover-grad"></div>
-                <div class="cover-texts">
+                <div class="cover-2">
+                  <div class="cover-grad"></div>
+                  <div class="cover-text">
                     <div class="sub-title">New & Classics</div>
                     <h3>Movies</h3>
+                  </div>
                 </div>
-            </div>
-        </div>
-            <div class="cover-3">
-                <div class="cover-grad"></div>
-                <div class="cover-texts">
+                <div class="cover-3">
+                  <div class="cover-grad"></div>
+                  <div class="cover-text">
                     <div class="sub-title">Groundbreaking</div>
-                    <h3>Hulu Origionals</h3>
+                    <h3>Hulu Originals</h3>
+                  </div>
                 </div>
-            </div>
-        </div>
-            <div class="cover-4">
-                <div class="cover-grad"></div>
-                <div class="cover-texts">
+                <div class="cover-4">
+                  <div class="cover-grad"></div>
+                  <div class="cover-text">
                     <div class="sub-title">Add-On</div>
                     <h3>Premiums</h3>
+                  </div>
                 </div>
-            </div>
-        </div>
-    </section>
+              </div>
+            </section>
 
     <script src="js/main.js"></script>
 </body>
