Added live border around text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </section>
 
             <div class="section live">
-              <div class="live border">
+              <div class="live-border">
                 <h4>Hulu + Live TV</h4>
                 <div class="text-xl">Live TV Makes It Better</div>
                 <div class="sub-text">Make the switch from cable. Get 75+ top channels with your favorite
