--- a/index.html
+++ b/index.html
@@ -173,6 +173,30 @@
               </div>
             </footer>
 
+            <div class="modal">
+              <div class="modal-box">
+                <div class="modal-body">
+                    <h3>Log In</h3>
+                    <form>
+                      <div class="form-control">
+                        <label for="email">Email</label>
+                        <input type="email"  id="email">
+                      </div>
+                      <div class="form-control">
+                        <label for="password">Password</label>
+                        <input type="password"  id="password">
+                      </div>
+                      <p> <a href="#">Forgot your password</a></p>
+                      <button class="btn btn-dark">Log In</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                  <p>Dont have an account <a href="#">Start your free trial</a></p>
+                </div>
+              </div>
+              <img class="close" src="img/close.svg" alt="close" />
+            </div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
